--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Window Popup</title>
+    <title>Add diamond</title>
     <style>
         body {
             background-color: rgba(0, 0, 0, 0.1); /* Semi-transparent black */
@@ -9,10 +9,9 @@
 
         #popupContainer {
             display: none;
-            position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
+            width:100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent black */
         }
@@ -21,23 +20,74 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            width: 70%;
+            height: 70%;
             transform: translate(-50%, -50%);
             padding: 20px;
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
+        .inputGroup {
+        font-family: 'Segoe UI', sans-serif;
+        margin: 1em 0 1em 0;
+        max-width: 190px;
+        }
+
+        .inputGroup input {
+        font-size: 100%;
+        padding: 0.8em;
+        outline: none;
+        border: 2px solid rgb(200, 200, 200);
+        background-color: transparent;
+        border-radius: 20px;
+        width: 100%;
+        }
+        h2{
+        font-family: 'Segoe UI', sans-serif;
+        }
+        button {
+        padding: 1.3em 3em;
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+        font-weight: 500;
+        color: #000;
+        background-color: #fff;
+        border: none;
+        border-radius: 45px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        outline: none;
+        }
+
+        button:hover {
+        background-color: #C5FF78;
+        box-shadow: 0px 15px 20px rgba(197, 255, 120, 0.4);
+        color: #000000;
+        transform: translateY(-7px);
+        }
+
+        button:active {
+        transform: translateY(-1px);
+        }
     </style>
 </head>
 <body>
     <button id="popupButton">Open Popup</button>
-
     <div id="popupContainer">
-        <div id="popupContent">
-            <!-- Add your content here -->
-            <h2>Popup Window</h2>
-            <p>This is the popup content.</p>
-            <button id="closeButton">Close</button>
+        <div id="popupContent"> 
+            <div style="text-align: center;">
+                <h2>Enter the certificat number</h2>
+                <div class="inputGroup "style ="margin: auto;">
+                    <input type="text" required="" autocomplete="off" placeholder="certificat number">
+                </div>
+            </div>
+            <div style="text-align: center; padding: 10%;">
+                <button id="submit">Submit</button>
+                <button id="closeButton">Cancel</button>
+            </div>
         </div>
     </div>
 
