--- a/index.html
+++ b/index.html
@@ -4,178 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diamond Inventory Management System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #F5F5F5;
-            font-family: tahoma;
-        }
-
-        #sideMenu {
-            position: fixed;
-            bottom: 0; /* Start from the bottom of the header menu */
-            left: 0;
-            height: 92%; /* Calculate the height excluding the header menu */
-            width: 20%;
-            background-color: #E4E4E4;
-            box-shadow: 2px 0 4px rgba(0, 0, 0, 0.2); /* Add shadow effect on the right */
-            display: flex;
-            flex-direction: column; /* Stack items vertically */
-            align-items: center; /* Center items horizontally */
-        }
-
-        #buttons {
-            margin-top: 16%;
-        }
-
-        button {
-            width: 100%;
-            height: 3em;
-            margin-bottom: 20px;
-            border-radius: 30em;
-            font-size: 15px;
-            font-family: inherit;
-            border: none;
-            position: relative;
-            overflow: hidden;
-            z-index: 1;
-            box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #E4E4E4;
-        }
-
-        button::before {
-            content: '';
-            width: 0;
-            height: 3em;
-            border-radius: 30em;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-image: linear-gradient(to right, #C5FF78 0%, #C5FF78 100%);
-            transition: .5s ease;
-            display: block;
-            z-index: -1;
-        }
-
-        button:hover::before {
-            width: 18em;
-        }
-
-        #headerMenu {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%; /* Occupy the full width of the page */
-            height: 8%;
-            background-color: #F5F5F5;
-            display: flex;
-            align-items: center;
-            justify-content: space-between; /* Align items to the left and right edges */
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow effect at the bottom */
-        }
-
-        #headerMenu img {
-            height: 80%;
-            margin-left: 20px;
-            object-fit: contain;
-        }
-
-        #headerMenu span {
-            font-weight: bold;
-            margin-right: 50px;
-        }
-
-        #body {
-            margin-top: 8%;
-            text-align: center;
-            padding: 30px;
-        }
-
-        #action_buttons {
-            display: block;
-            margin-bottom: 20px;
-            padding: 10px;
-            margin-left: 14%;
-        }
-
-        #body button1 {
-          padding: 40px 80px;
-          font-size: 18px;
-          text-transform: uppercase;
-          letter-spacing: 2.5px;
-          margin-right: 10px;
-          font-weight: 500;
-          color: #000000;
-          background-color: #fff;
-          border: none;
-          border-radius: 45px;
-          box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-          transition: all 0.3s ease 0s;
-          cursor: pointer;
-          outline: none;
-        }
-
-        #body button1:hover {
-          background-color: #C5FF78;
-          box-shadow: 0px 15px 20px rgba(197, 255, 120, 0.4);
-          color: #000000;
-          transform: translateY(-7px);
-        }
-
-        #body button1:active {
-          transform: translateY(-1px);
-        }
-
-        table {
-            margin: auto;
-            margin-top: 150px;
-            border-collapse: collapse;
-            width: 88%;
-        }
-
-        th, td {
-            padding: 10px;
-            border-bottom: 1px solid #E4E4E4;
-        }
-
-        th {
-            background-color: #C5FF78;
-        }
     </style>
 </head>
 <body>
-    <div id="sideMenu">
-        <div id="buttons">
-            <button href="#">Home Page</button>
-            <button href="#">Inventory</button>
-            <button href="#">Sales</button>
-        </div>
-    </div>
-    <div id="headerMenu">
+    <header id ="headerMenu" class= "container-fluid">
         <img src="logo.png" alt="logo">
         <span>Alon Netzer</span>
-    </div>
-    <div id="body">
-        <div id="action_buttons">
-            <button1 href="#">Add Diamond</button1>
-            <button1 href="#">Edit Diamond</button1>
-            <button1 href="#">Sell Diamond</button1>
-        <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Diamond ID</th>
-                    <th>Name</th>
-                    <th>Carat</th>
-                    <th>Color</th>
-                    <th>Clarity</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Your diamond data rows will go here -->
-            </tbody>
-        </table>
+    </header>
+    <div class="container-fluid" >
+        <div class="row" >
+            <div class="col-lg-2" style="background-color: #E4E4E4;">
+                <nav class="nav flex-column">
+                    <button href="#">Home Page</button>
+                    <button href="#">Inventory</button>
+                    <button href="#">Sales</button>
+                </nav>
+            </div>
+            <div class="col-lg-10">
+                <main>
+                    <h1>Home Dashboard</h1>
+                    <div id="action_buttons">
+                        <button1 id="popupButton">Add Diamond</button1>
+                        <!--This is the Pop up window for adding diamond-->
+                        <div id="popupContainer">
+                            <div id="popupContent"> 
+                                <div style="text-align: center;">
+                                    <h2>Enter a certificat number</h2>
+                                    <div style="margin: auto; display: flex; justify-content: center; align-items: center;">
+                                        <div class="inputGroup" style="display: flex; align-items: center;">
+                                            <input type="text" required="" autocomplete="off" placeholder="certificat number">
+                                            <!--A button that sends the ID of the diamond to the API-->
+                                            <button id ='getButton' class="cta">
+                                                <span>get</span>
+                                                <svg viewBox="0 0 13 10" height="10px" width="15px">
+                                                  <path d="M1,5 L11,5"></path>
+                                                  <polyline points="8 1 12 5 8 9"></polyline>
+                                                </svg>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div style="text-align: center; padding: 10%;display: flex; justify-content:space-between;">
+                                    <div id="submitButton"></div>
+                                    <button style="width: 30%;"class="pButton" id="closeButton">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                        <button1 href="#">Edit Diamond</button1>
+                        <button1 href="#">Sell Diamond</button1>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Diamond ID</th>
+                                <th>Shape</th>
+                                <th>Measurements</th>
+                                <th>Weight</th>
+                                <th>Color</th>
+                                <th>Clarity</th>
+                                <th>Cut</th>
+                                <th>Polish</th>
+                                <th>Symmetry</th>
+                                <th>Date</th>
+                                <th>Price/Carat</th>
+                                <th>Total Price</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!--?php include 'get_data.php'; ?-->
+                        </tbody>
+                    </table>
+                </main>
+            </div>
+        </div>
     </div>
 </body>
+<script>
+    const popupButton = document.getElementById('popupButton');
+    const popupContainer = document.getElementById('popupContainer');
+    const closeButton = document.getElementById('closeButton');
+    const getButton = document.getElementById('getButton');
+    const submitButton = document.getElementById('submitButton');
+
+    popupButton.addEventListener('click', () => {
+        popupContainer.style.display = 'block';
+    });
+
+    closeButton.addEventListener('click', () => {
+        popupContainer.style.display = 'none';
+        hideSubmitButton(); // Call the function to hide the "Submit" button
+        getButton.disabled = false;
+    });
+    // Function to create and insert the "Submit" button
+    function showSubmitButton() {
+        const newButton = document.createElement('button');
+        newButton.textContent = 'Submit';
+        newButton.classList.add('pButton'); // Add the custom class
+        submitButton.append(newButton);
+    // Apply flex layout to the submitButton container
+        submitButton.style.width = '30%';
+};
+// Function to hide the "Submit" button
+    function hideSubmitButton() {
+        const existingButton = submitButton.querySelector('.pButton');
+        if (existingButton) {
+            existingButton.remove();
+        }
+    }
+  // Add event listener to the "Get" button
+    getButton.addEventListener('click', () => {
+        showSubmitButton();
+        getButton.disabled = true; // Disable the main button
+
+    });
+
+</script>
 </html>
