Changing the background and adding buttons

--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     </header>
     <div class="container-fluid" >
         <div class="row" >
-            <div class="col-lg-2" style="background-color: #E4E4E4;">
+            <div class="col-lg-2">
                 <nav class="nav flex-column">
                     <button href="#">Home Page</button>
                     <button href="#">Inventory</button>
                     <button href="#">Sales</button>
+                    <button href="#">Customers</button>
+                    <button href="#">Settings</button>
                 </nav>
             </div>
             <div class="col-lg-10">
                 <main>
-                    <h1>Home Dashboard</h1>
+                    <!--h1>Home Dashboard</h1-->
                     <div id="action_buttons">
                         <button1 id="popupButton">Add Diamond</button1>
                         <!--This is the Pop up window for adding diamond-->
@@ -40,7 +42,7 @@
                                             <input type="text" required="" autocomplete="off" placeholder="certificat number">
                                             <!--A button that sends the ID of the diamond to the API-->
                                             <button id ='getButton' class="cta">
-                                                <span>get</span>
+                                                <span>Get</span>
                                                 <svg viewBox="0 0 13 10" height="10px" width="15px">
                                                   <path d="M1,5 L11,5"></path>
                                                   <polyline points="8 1 12 5 8 9"></polyline>
