--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     <h2>Enter a certificat number</h2>
                                     <div style="margin: auto; display: flex; justify-content: center; align-items: center;">
                                         <div class="inputGroup" style="display: flex; align-items: center;">
-                                            <input type="text" required="" autocomplete="off" placeholder="certificat number">
+                                            <input type="text" required="" autocomplete="off" placeholder="certificat number" id="certificateNumber">
                                             <!--A button that sends the ID of the diamond to the API-->
                                             <button id ='getButton' class="cta">
                                                 <span>Get</span>
@@ -51,6 +51,25 @@
                                         </div>
                                     </div>
                                 </div>
+                                <table id="diamondTable" style="display: none;">
+                                    <thead>
+                                        <tr>
+                                            <th>Diamond ID</th>
+                                            <th>Shape</th>
+                                            <th>Measurements</th>
+                                            <th>Weight</th>
+                                            <th>Color</th>
+                                            <th>Clarity</th>
+                                            <th>Cut</th>
+                                            <th>Polish</th>
+                                            <th>Symmetry</th>
+                                            <th>Date</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <!-- Fetched data will be inserted here -->
+                                    </tbody>
+                                </table>
                                 <div style="text-align: center; padding: 10%;display: flex; justify-content:space-between;">
                                     <div id="submitButton"></div>
                                     <button style="width: 30%;"class="pButton" id="closeButton">Cancel</button>
@@ -166,15 +185,15 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     const popupAddButton = document.getElementById('AddPopupButton');
     const popupEditButton = document.getElementById('editpopupButton');
     const popupEditContainer = document.getElementById('EditContainer');
     const popupAddContainer = document.getElementById('AddContainer');
-    const closeButton = document.getElementById('closeButton');
-    const getButton = document.getElementById('getButton');
     const submitButton = document.getElementById('submitButton');
-   
+    const closeButton = document.getElementById('closeButton');
+
     popupAddButton.addEventListener('click', () => {
         popupAddContainer.style.display = 'block';
     });
@@ -186,6 +205,7 @@
         hideSubmitButton(); // Call the function to hide the "Submit" button
         getButton.disabled = false;
     });
+
     // Function to create and insert the "Submit" button
     function showSubmitButton() {
         const newButton = document.createElement('button');
@@ -194,19 +214,64 @@
         submitButton.append(newButton);
     // Apply flex layout to the submitButton container
         submitButton.style.width = '30%';
-};
-// Function to hide the "Submit" button
+    };
+
+    // Function to hide the "Submit" button
     function hideSubmitButton() {
         const existingButton = submitButton.querySelector('.pButton');
         if (existingButton) {
             existingButton.remove();
         }
     }
-  // Add event listener to the "Get" button
-    getButton.addEventListener('click', () => {
-        showSubmitButton();
-        getButton.disabled = true; // Disable the main button
 
+    $(document).ready(function() {
+    
+        const $getButton = $('#getButton');
+        const $diamondTable = $('#diamondTable');
+        const $certificateNumber = $('#certificateNumber');
+
+        // Add event listener to the "Get" button
+        $getButton.click(function() {
+            const certNumber = $certificateNumber.val();
+            const currentDate = new Date().toLocaleDateString();
+
+            $.ajax({
+                type: 'POST',
+                url: 'get_data.php',
+                data: { report_number: certNumber },
+                dataType: 'json',
+                success: function(data) {
+                    if (!data.error) {
+                        // Clear previous data and populate the table
+                        $diamondTable.find('tbody').empty();
+                        const newRow = `
+                            <tr>
+                                <td>${certNumber}</td>
+                                <td>${data.shape_and_cutting_style}</td>
+                                <td>${data.measurements}</td>
+                                <td>${data.carat_weight}</td>
+                                <td>${data.color_grade}</td>
+                                <td>${data.clarity_grade}</td>
+                                <td>${data.cut_grade}</td>
+                                <td>${data.polish}</td>
+                                <td>${data.symmetry}</td>
+                                <td>${currentDate}</td>
+                            </tr>`;
+                        $diamondTable.find('tbody').append(newRow);
+                        $diamondTable.show();
+                    } else {
+                        alert(data.error); // Display an error message if fetching fails
+                    }
+                },
+                error: function(xhr, status, error) {
+                    alert('An error occurred while fetching data.');
+                    console.error(error);
+                }
+            });
+            showSubmitButton()
+            getButton.disabled = true; // Disable the main button
+
+        });
     });
 </script>
 </html>
